<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backed"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >
    <include layout="@layout/title_bar" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffEDEDED" />
    <include layout="@layout/title_barlogin" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffEDEDED" />
    <include layout="@layout/title_bar5" />
    <Button
       android:onClick="submit"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/home_btn_bg4"
        android:text="@string/str_denglu"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/regist"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_dl_zc"
        android:gravity="center"
        android:text="@string/str_zhuce"
        android:textColor="@color/white"
        android:textSize="15sp" />
        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/str_zhaohiu"
            android:textColor="#f16992"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                style="@style/global_wwhw"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_dl_wxts" />

            <TextView
                style="@style/global_wwhw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_orderwenxin"
                android:textColor="#f16992" />
        </LinearLayout>

        <TextView
            style="@style/global_wwhw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_msg"
            android:textColor="#5f5f5f" />


</LinearLayout>